update preview image

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
     <script src="assets/js/jquery-1.11.1.min.js"></script>
 
     <meta property="og:type" content="article">
-    <meta property="og:url" content="http://www.webstack.cc/">
+    <meta property="og:url" content="http://shuziyimin.org/">
     <meta property="og:title" content="数字移民导航">
     <meta property="og:description" content="数字移民导航">
-    <meta property="og:image" content="http://webstack.cc/assets/images/webstack_banner_cn.png">
+    <meta property="og:image" content="https://cdn.shuziyimin.org/shuziyimin.org-preview-image.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="数字移民导航">
     <meta name="twitter:description" content="数字移民导航">
-    <meta name="twitter:image" content="http://www.webstack.cc/assets/images/webstack_banner_cn.png">
+    <meta name="twitter:image" content="https://cdn.shuziyimin.org/shuziyimin.org-preview-image.png">
     
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106350291-5"></script>
