--- a/index.html
+++ b/index.html
@@ -69,12 +69,6 @@
                 </header>
                 <ul id="main-menu" class="main-menu">
                     <li>
-                        <a href="#popular-1-0" class="smooth">
-                            <i class="linecons-star"></i>
-                            <span class="title">常用推荐</span>
-                        </a>
-                    </li>
-                    <li>
                         <a>
                             <i class="linecons-doc"></i>
                             <span class="title">新闻</span>
@@ -217,15 +211,15 @@
                             </li>
                         </ul>
                     </li>
+                    <br>
+                    <br>
                     <li>
-                        <a href="https://blog.shuziyimin.org/431" target="_blank">
-                            <i class="linecons-heart"></i>
-                            <span class="tooltip-blue">关于本站</span>
+                        <a href="https://shuziyimin.org/tools.html" target="_blank">
+                            <span class="tooltip-blue">工具推荐 | 前往↗ </span>
                             <span class="label label-Primary pull-right hidden-collapsed"></span>
                         </a>
                         <li>
                             <a href="https://docs.google.com/forms/d/e/1FAIpQLSd41bkbC0glucPtQbBTGpRvvhXfuXFD8DA18xdOEfYbvFOqqA/viewform" target="_blank">
-                                <i class="linecons-thumbs-up"></i>
                                 <span class="tooltip-blue">提交您想收录的网站</span>
                                 <span class="label label-Primary pull-right hidden-collapsed"></span>
                             </a>
