add google adsense tracking code

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
         gtag('js', new Date());
         gtag('config', 'UA-106350291-5');
     </script>
+    
+    <!-- Google adsense code -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9387153079206507"
+        crossorigin="anonymous">
+    </script>
 </head>
 
 <body class="page-body">
