update google analytics code

--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
     <meta name="twitter:description" content="数字移民导航">
     <meta name="twitter:image" content="https://cdn.shuziyimin.org/shuziyimin.org-preview-image.png">
     
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106350291-5"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BXHG6NQ886"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'UA-106350291-5');
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-BXHG6NQ886');
     </script>
     
     <!-- Google adsense code -->
